--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
 	    <title>Global Water Crisis</title>
+		<link rel="stylesheet" href="themes/default/default.css" type="text/css" media="screen" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="css/nivo-slider.css" type="text/css" rel="stylesheet"/>
 		<link href = "css/bootstrap.min.css" rel = "stylesheet">
 		<link href = "css/styles.css" rel = "stylesheet">
 	</head>
@@ -28,11 +30,22 @@
 				   </div>
 			   </div>
 		 </div>
-		 
+
+       
+
+
 		 <div class = "container">
 			       <div class = "jumbotron">
 				      <center>
 					     <h1>GLOBAL WATER CRISIS</h1>
+ 							<div class="slider-wrapper theme-default">
+            					<div id="slider" class="nivoSlider">
+                					<img src="img/drought4.png" alt="" />
+                					<img src="img/drought3.png"  alt="" />
+                					<img src="img/water.png" alt="" />
+                					<img src="img/drought1.png" alt="" />
+            					</div>
+        					</div>					  				  			  
 					  </center>
 				   </div>
 		</div>
@@ -45,8 +58,13 @@
 					   <a href = "#" class = "navbar-btn btn-danger btn pull-right">About Us</a>
 				   </div>
 		</div>
-		
-	     <script src = "jquery/jquery-1.11.3.min.js"></script>
+			<script src = "jquery/jquery-1.11.3.min.js"></script>
+	     <script src="js/jquery.nivo.slider.pack.js" type="text/javascript"></script> 
 	     <script src = "js/bootstrap.js"></script>
+	     <script type="text/javascript">
+		$(window).load(function() {
+    		$('#slider').nivoSlider();
+		});
+</script>
 	</body>
 </html>
